--- a/package.json
+++ b/package.json
@@ -4,19 +4,54 @@
   "description": "react practice",
   "main": "webpack.config.dev.js",
   "scripts": {
+    "tcm": "tcm src -o typings",
+    "prestart": "npm run tcm",
     "start": "webpack-serve --config webpack.config.preview.js",
+    "prebuild": "npm run tcm",
     "build": "webpack --config webpack.config.dev.js",
-    "build:prod": "webpack --config webpack.config.prod.js"
+    "build:prod": "webpack --config webpack.config.prod.js",
+    "pretest": "npm run tcm"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "browserify": "^16.2.3",
+    "css-loader": "^1.0.0",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
+    "postcss-loader": "^3.0.0",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "style-loader": "^0.23.1",
+    "styled-components": "^4.0.2",
+    "styled-jsx": "^3.1.0",
+    "tslint-config-standard": "^8.0.1",
+    "tslint-react": "^3.6.0",
+    "typed-css-modules": "^0.3.6",
+    "typed-css-modules-loader": "0.0.15",
+    "yarn": "^1.10.1"
   },
   "devDependencies": {
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "html-webpack-plugin": "^3.2.0",
+    "ts-loader": "^5.2.2",
+    "tslint": "^5.11.0",
+    "tslint-config-airbnb": "^5.11.0",
+    "tslint-loader": "^3.5.4",
+    "typescript": "^3.1.3",
+    "webpack": "^4.21.0",
+    "webpack-cli": "^3.1.2",
     "webpack-serve": "^2.0.2"
+  },
+  "browserify": {
+    "transform": [
+      [
+        "brfs",
+        {
+          "ignore": "\\.(json|css)$"
+        }
+      ]
+    ]
   }
 }
