--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -10,6 +10,10 @@
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": true
-    }
+        "noFallthroughCasesInSwitch": true,
+        "rootDirs": ["src", "typings"]
+    },
+    "exclude": [
+        "node_modules"
+    ]
 }
