--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/react-router": "^4.0.32",
+    "@types/react-router-dom": "^4.3.1",
     "browserify": "^16.2.3",
     "css-loader": "^1.0.0",
     "less": "^3.8.1",
@@ -22,6 +24,8 @@
     "postcss-loader": "^3.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "style-loader": "^0.23.1",
     "styled-components": "^4.0.2",
     "styled-jsx": "^3.1.0",
